Prevent horizontal overflow

--- a/s/tyle/main.css
+++ b/s/tyle/main.css
@@ -5,6 +5,7 @@
 html, body {
 	margin: 0;
 	overscroll-behavior: contain;
+	overflow-x: hidden;
 }
 .hide {
 	display: none !important;
